# fetch_bot_appliedplanningoptimization

./: .gitignore  README.md  pyproject.toml
notebooks/: cube_detection.ipynb  rrt_new.ipynb
src/: control_code_mujoco.ipynb  newton_solver.py
