[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "applied-planning"
version = "0.0.1"
description = "Applied Planning & Optimization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "gymnasium>=0.29",
    "xarm-python-sdk==1.17.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.10",
    "stable-baselines3",
    "tensorboard",
    "tqdm",
    "rich",
    "pyrealsense2 ; sys_platform != 'darwin'",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"